--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.0.1",
   "private": false,
   "devDependencies": {
-    "bower": "*"
+    "bower": "*",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-less": "~0.10.0"
   }
 }
